--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 * {
   margin: 0;
   padding: 0;
+  background-color: #F5F4EB;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select:none;
@@ -54,7 +55,7 @@ nav {
 a {
   color: black;
   text-decoration: none;
-  text-decoration-color: white;
+  text-decoration-color: #F5F4EB;
 }
 
 a:hover {
@@ -103,7 +104,7 @@ a:hover {
   position: absolute;
   top: 100%;
   right: 0;
-  background-color: white;
+  background-color: #F5F4EB;
   width: fit-content;
   max-height: 0;
   overflow: hidden;
@@ -248,7 +249,7 @@ section {
 .btn-color-1,
 .btn-color-2:hover {
   background: rgb(53, 53, 53);
-  color: white;
+  color: #F5F4EB;
 }
 
 .btn-color-1:hover {
@@ -260,7 +261,7 @@ section {
 }
 
 .btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
+  border: #F5F4EB 0.1rem solid;
 }
 
 .btn-container {
@@ -302,7 +303,7 @@ section {
 .details-container {
   padding: 1.5rem;
   flex: 1;
-  background: white;
+  background: #F5F4EB;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
@@ -338,13 +339,12 @@ section {
   justify-content: center;
   flex-direction: column;
 }
-
 .article-container {
   display: flex;
   text-align: initial;
   flex-wrap: wrap;
   flex-direction: row;
-  gap: 2.5rem;
+  gap: 5rem;
   justify-content: space-around;
 }
 
@@ -367,7 +367,7 @@ article .icon {
 
 .color-container {
   border-color: rgb(163, 163, 163);
-  background: rgb(250, 250, 250);
+  background: #F5F4EB;
 }
 
 .project-img {
