About page completed

--- a/style.css
+++ b/style.css
@@ -282,7 +282,9 @@ section {
 
 .about-details-container {
   justify-content: center;
+  text-align: center;
   flex-direction: column;
+
 }
 
 .about-containers,
@@ -308,6 +310,7 @@ section {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  /* justify-content: center; */
 }
 
 .section-container {
@@ -315,11 +318,6 @@ section {
   height: 80%;
 }
 
-.section__pic-container {
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
-}
 
 /* EXPERIENCE SECTION */
 
